Social icons are no longer vertically stuck together on mobile display

--- a/less/utilities.less
+++ b/less/utilities.less
@@ -134,7 +134,7 @@
 .social-mini li {
   display: inline-block;
   font-size: 16px;
-  padding: 0 12px;
+  padding: 12px;
 }
 /* - Responsive videos -*/
 .videoWrapper {
